--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,6 +28,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('about')}}">About</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('db')}}">DB</a>
+                </li>
             </ul>
         </div>
     </nav>
