--- a/templates/db.html
+++ b/templates/db.html
@@ -9,6 +9,11 @@
         featured content or information.</p>
     <hr class="my-4">
     <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+
+    {% for row in data %}
+        <p>{{ row }}</p>
+    {% endfor %}
+
 </div>
 
 {% endblock %}
