--- a/templates/db.html
+++ b/templates/db.html
@@ -16,6 +16,7 @@
                 <td>Id</td>
                 <td>Name</td>
                 <td>Price</td>
+                <td>Operations</td>
             </tr>
         </thead>
         <tbody>
@@ -24,6 +25,10 @@
                     <td>{{row[0]}}</td>
                     <td>{{row[1]}}</td>
                     <td>{{row[2]}}</td>
+                    <td>
+                        <a href="/edit/{{row[0]}}">Edit</a>
+                        <a href="/delete/{{row[0]}}">Delete</a>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
