--- a/templates/db.html
+++ b/templates/db.html
@@ -4,37 +4,45 @@
 
 <!-- https://getbootstrap.com/docs/4.4/components/jumbotron/ -->
 <div class="jumbotron">
-    <h1 class="display-4">Hello, DB!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-        featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <div class="container">
+        <h1 class="display-4">Hello, DB!</h1>        
 
-    <table>
-        <thead>
-            <tr>
-                <td>Id</td>
-                <td>Name</td>
-                <td>Price</td>
-                <td>Operations</td>
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in data %}
+        {% with messages = get_flashed_messages()  %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+
+        <table>
+            <thead>
+                <tr>
+                    <td>Id</td>
+                    <td>Name</td>
+                    <td>Price</td>
+                    <td>Operations</td>
+                </tr>
+            </thead>
+            <tbody>
+                {% for row in data %}
                 <tr>
                     <td>{{row[0]}}</td>
                     <td>{{row[1]}}</td>
                     <td>{{row[2]}}</td>
                     <td>
-                        <a href="/edit/{{row[0]}}">Edit</a>
-                        <a href="/delete/{{row[0]}}">Delete</a>
+                        <a href="/edit/{{row[0]}}" class="btn btn-secondary">Edit</a>
+                        <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete">Delete</a>
                     </td>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-        
+                {% endfor %}
+            </tbody>
+        </table>
 
+    </div>
 </div>
 
 {% endblock %}
