--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
+
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/logo_jav2074_esfera.png') }}">
+
 </head>
 
 <body>
