--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,8 @@
 {% extends 'layout.html' %}
 
-{% block content %}
+{% block body %}
 
-<!-- https://getbootstrap.com/docs/4.4/components/jumbotron/ -->
-<div class="jumbotron">
+<div class="card card-body">
     <h1 class="display-4">Hello, ABOUT!</h1>
     <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
         featured content or information.</p>
