--- a/templates/db.html
+++ b/templates/db.html
@@ -1,48 +1,46 @@
 {% extends 'layout.html' %}
 
-{% block content %}
+{% block body %}
 
-<!-- https://getbootstrap.com/docs/4.4/components/jumbotron/ -->
-<div class="jumbotron">
-    <div class="container">
-        <h1 class="display-4">Hello, DB!</h1>        
+<div class="card card-body">
+    <h1 class="display-4">Hello, DB!</h1>
 
-        {% with messages = get_flashed_messages()  %}
-        {% if messages %}
-        {% for message in messages %}
-        <div class="alert alert-success alert-dismissible">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{ message }}
-        </div>
-        {% endfor %}
-        {% endif %}
-        {% endwith %}
-
-        <table>
-            <thead>
-                <tr>
-                    <td>Id</td>
-                    <td>Name</td>
-                    <td>Price</td>
-                    <td>Operations</td>
-                </tr>
-            </thead>
-            <tbody>
-                {% for row in data %}
-                <tr>
-                    <td>{{row[0]}}</td>
-                    <td>{{row[1]}}</td>
-                    <td>{{row[2]}}</td>
-                    <td>
-                        <a href="/edit/{{row[0]}}" class="btn btn-secondary">Edit</a>
-                        <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete">Delete</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
+    {% with messages = get_flashed_messages()  %}
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-success alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
     </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+    <table>
+        <thead>
+            <tr>
+                <td>Id</td>
+                <td>Name</td>
+                <td>Price</td>
+                <td>Operations</td>
+            </tr>
+        </thead>
+        <tbody>
+            {% for row in data %}
+            <tr>
+                <td>{{row[0]}}</td>
+                <td>{{row[1]}}</td>
+                <td>{{row[2]}}</td>
+                <td>
+                    <a href="/edit/{{row[0]}}" class="btn btn-secondary">Edit</a>
+                    <a href="/delete/{{row[0]}}" class="btn btn-danger btn-delete">Delete</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
 </div>
+
 
 {% endblock %}
