--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- TITLE -->
     <title>Flask</title>
+    <!-- ICON -->
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/logo_jav2074_esfera.png') }}">
 
     <!-- BOOSTRAP 4 -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">>
     <!-- CSS -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
-    <!-- ICON -->
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/logo_jav2074_esfera.png') }}">
-
 </head>
 
 <body>
