--- a/templates/about.html
+++ b/templates/about.html
@@ -2,13 +2,15 @@
 
 {% block body %}
 
-<div class="card card-body">
-    <h1 class="display-4">Hello, ABOUT!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to
-        featured content or information.</p>
-    <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <a class="btn btn-primary btn-lg" href="/" role="button">Go Home</a>
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title">Hello, ABOUT!</h4>
+        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        <a href="/" class="card-link">Card link</a>
+        <a href="/" class="card-link">Another link</a>
+    </div>
 </div>
 
 {% endblock %}
