--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- TITLE -->
     <title>Flask</title>
-    <!-- ICON -->
+    <!-- FAVICON -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/logo_jav2074_esfera.png') }}">
 
     <!-- BOOSTRAP 4 -->
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">>
     <!-- CSS -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
+    <!-- ICONS -->
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 
 <body>
