--- a/templates/db.html
+++ b/templates/db.html
@@ -50,7 +50,7 @@
                         title="edit">
                         <i class='fas fa-edit' style='font-size:14px'></i>
                     </a>
-                    <a href="/delete/{{row[0]}}" class="btn btn-danger" data-toggle="tooltip" data-placement="left"
+                    <a href="/del/{{row[0]}}" class="btn btn-danger" data-toggle="tooltip" data-placement="left"
                         title="delete">
                         <i class='fas fa-trash-alt' style='font-size:18px'></i>
                     </a>
