--- a/templates/delete.html
+++ b/templates/delete.html
@@ -6,15 +6,15 @@
     <div class="col-md-4 offset-md-4">
         {% for row in data %}
         <div class="card card-body bg-dark">
-            <form action="/update/{{row[0]}}" method="POST">
+            <form action="/delete/{{row[0]}}" method="POST">
                 <div class="form-group">
                     <input type="text" name="id" placeholder="Id" value="{{row[0]}}" class="form-control" disabled>
                 </div>
                 <div class="form-group">
-                    <input type="text" name="name" placeholder="Name" value="{{row[1]}}" class="form-control">
+                    <input type="text" name="name" placeholder="Name" value="{{row[1]}}" class="form-control" disabled>
                 </div>
                 <div class="form-group">
-                    <input type="text" name="price" placeholder="Price" value="{{row[2]}}" class="form-control">
+                    <input type="text" name="price" placeholder="Price" value="{{row[2]}}" class="form-control" disabled>
                 </div>
                 <div class="form-group">
                     <div id="container-fluid">
@@ -28,8 +28,8 @@
                             </div>
                             <div class="col-6">
                                 <span class="float-right">
-                                    <button type="submit" class="btn btn-primary btn-block">
-                                        Update
+                                    <button type="submit" class="btn btn-danger btn-block">
+                                        Delete
                                     </button>
                                 </span>
                             </div>
