--- a/templates/insert.html
+++ b/templates/insert.html
@@ -7,7 +7,7 @@
         <div class="card card-body bg-dark">
             <form action="/insert" method="POST">
                 <!-- <div class="form-group">
-                    <input type="text" name="id" placeholder="Id" value="" class="form-control" disabled=true>
+                    <input type="text" name="id" placeholder="Id" value="" class="form-control" disabled>
                 </div> -->
                 <div class="form-group">
                     <input type="text" name="name" placeholder="Name" value="" class="form-control">
