--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,8 @@
     <p class="lead">
         <a class="btn btn-primary btn-lg" href="/" role="button">Learn more</a>
     </p>
+
+    <p>{{db_dir}}</p>
 </div>
 
 {% endblock %}
