--- a/templates/insert.html
+++ b/templates/insert.html
@@ -28,7 +28,7 @@
                             <div class="col-6">
                                 <span class="float-right">
                                     <button type="submit" class="btn btn-primary btn-block">
-                                        Update
+                                        Insert
                                     </button>
                                 </span>
                             </div>
